<!-- Detail Layout for Grid -->
<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_additional_pane"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2"
    android:background="@color/detail_accent_pane_background"
    android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
    android:paddingEnd="@dimen/stock_detail_horizontal_padding"
    android:paddingLeft="@dimen/stock_detail_horizontal_padding"
    android:paddingRight="@dimen/stock_detail_horizontal_padding"
    android:paddingStart="@dimen/stock_detail_horizontal_padding"
    android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
    app:columnCount="2">

    <TextView
        android:id="@+id/detail_current_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/current_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_current_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="10" />

    <TextView
        android:id="@+id/detail_minimum_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/minimum_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_minimum_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="7.05" />

    <TextView
        android:id="@+id/detail_maximum_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/maximum_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_maximum_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="7.05" />

    <TextView
        android:id="@+id/detail_annual_min_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/annual_minimum"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_annual_min_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="7.05" />

    <TextView
        android:id="@+id/detail_annual_max_label_textview"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:text="@string/annual_max"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/detail_accent_label"
        app:layout_columnWeight="1"
        app:layout_gravity="fill"
        app:layout_rowWeight="1" />

    <TextView
        android:id="@+id/detail_annual_max_textview"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/white"
        app:layout_gravity="fill"
        tools:text="7.05" />
</android.support.v7.widget.GridLayout>
